Additional tests for module imports.